<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CrazyTipCalc</string>
    <string name="action_settings">Settings</string>
    <string name="bill_text_view">Bill</string>
    <string name="bill_edit_text">0.0</string>
    <string name="tip_text_view">Tip</string>
    <string name="tip_edit_text">.15</string>
    <string name="final_text_view">Final Bill</string>
    <string name="final_bill_edit_text">.15</string>
    <string name="change_tip_text_view">Tip</string>
    
    <string name="intro_text_view">Intoduction</string>
    <string name="intro_friendly_text_view">Friendly</string>
    <string name="intro_specials_text_view">Specials</string>
    <string name="intro_opinion_text_view">Opinion</string>
    <string name="available_text_view">Availability</string>
    <string name="bad_radio_button">Bad</string>
    <string name="ok_radio_button">OK</string>
    <string name="good_radio_button">Good</string>
    <string name="time_waiting_text_view">Time Waiting for Service:  </string>
    <string name="start_chronometer_button">Start</string>
    <string name="pause_chronometer_button">Pause</string>
    <string name="reset_chronometer_button">Reset</string>

    <string-array name="problem_solving">       
        <item>Problem Solving</item>
        <item>Bad</item>
        <item>OK</item>
        <item>Good</item>
    </string-array>
       
</resources>
